--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "date-fns": "^3.6.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
